repos/tvl-labs/T-Axi/tree-sitter-axi/test/corpus/propositional-logic.txt
=============
Declarations
=============
proposition P : Prop
proposition Q : Prop
proposition R : Prop

---

(source_file
  (separator)
  (constant_declaration
    (proposition)
    (identifier)
    (type_ann
      (identifier)))
  (separator)
  (constant_declaration
    (proposition)
    (identifier)
    (type_ann
      (identifier)))
  (separator)
  (constant_declaration
    (proposition)
    (identifier)
    (type_ann
      (identifier)))
  (separator))

===========
Assumption
===========
theorem weakening : P --> Q --> P
proof
  assume p : P
  assume q : Q
  p
qed

theorem assume-two : P --> Q --> P
proof
  assume (p : P) (q : Q)
  p
qed

theorem assume-two-same : P --> P --> P
proof
  assume p1 p2 : P
  p1
qed

theorem assume-discard : P --> Q --> P
proof
  assume (p : P) _
  p
qed

theorem assume-no-annotation : P --> Q --> P
proof
  assume p q
  p
qed

theorem no-assume (p : P) (q : Q) : P
proof
  p
qed

theorem assumption-example : P --> Q --> P
proof
  assume p q
  assumption
qed

---

(source_file
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (identifier)
        (implication
          (identifier)
          (identifier))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (identifier)
          (type_ann
            (identifier))))
      (separator)
      (assume
        (patterns
          (identifier)
          (type_ann
            (identifier))))
      (separator)
      (identifier)
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (identifier)
        (implication
          (identifier)
          (identifier))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (ann_pattern
            (identifier)
            (type_ann
              (identifier)))
          (ann_pattern
            (identifier)
            (type_ann
              (identifier)))))
      (separator)
      (identifier)
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (identifier)
        (implication
          (identifier)
          (identifier))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (identifier)
          (identifier)
          (type_ann
            (identifier))))
      (separator)
      (identifier)
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (identifier)
        (implication
          (identifier)
          (identifier))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (ann_pattern
            (identifier)
            (type_ann
              (identifier)))
          (identifier)))
      (separator)
      (identifier)
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (identifier)
        (implication
          (identifier)
          (identifier))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (identifier)
          (identifier)))
      (separator)
      (identifier)
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (parameters
      (explicit_parameters
        (identifier)
        (type_ann
          (identifier)))
      (explicit_parameters
        (identifier)
        (type_ann
          (identifier))))
    (type_ann
      (identifier))
    (proof_block
      (begin)
      (separator)
      (identifier)
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (identifier)
        (implication
          (identifier)
          (identifier))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (identifier)
          (identifier)))
      (separator)
      (assumption)
      (end)))
  (separator))

============
Application
============
theorem impl-elim : (P --> Q) --> P --> Q
proof
  assume pq p
  apply pq p
qed

theorem apply-many-args : (P --> Q --> R) --> (Q --> P --> R)
proof
  assume pqr q p
  apply pqr p q
qed

theorem apply-many-args' : (P --> Q --> R) --> (Q --> P --> R)
proof
  assume pqr q p
  apply (apply pqr p) q
qed

theorem impl-trans : (P --> Q) --> (Q --> R) --> (P --> R)
proof
  assume pq qr p
  apply qr
  apply pq
  p
qed

theorem apply-chaining : (P --> Q) --> (Q --> R) --> (P --> R)
proof
  assume pq qr p
  apply qr, pq
  p
qed

theorem impl-dist : (P --> Q --> R) --> ((P --> Q) --> (P --> R))
proof
  assume (pqr : P --> Q --> R) (pq : P --> Q) p
  apply pqr p, pq
  p
qed

---

(source_file
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (implication
          (identifier)
          (identifier))
        (implication
          (identifier)
          (identifier))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (identifier)
          (identifier)))
      (separator)
      (apply
        (call
          (identifier)
          (identifier)))
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (implication
          (identifier)
          (implication
            (identifier)
            (identifier)))
        (implication
          (identifier)
          (implication
            (identifier)
            (identifier)))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (identifier)
          (identifier)
          (identifier)))
      (separator)
      (apply
        (call
          (identifier)
          (identifier)
          (identifier)))
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (implication
          (identifier)
          (implication
            (identifier)
            (identifier)))
        (implication
          (identifier)
          (implication
            (identifier)
            (identifier)))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (identifier)
          (identifier)
          (identifier)))
      (separator)
      (apply
        (call
          (apply
            (call
              (identifier)
              (identifier)))
          (identifier)))
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (implication
          (identifier)
          (identifier))
        (implication
          (implication
            (identifier)
            (identifier))
          (implication
            (identifier)
            (identifier)))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (identifier)
          (identifier)
          (identifier)))
      (separator)
      (apply
        (identifier))
      (separator)
      (apply
        (identifier))
      (separator)
      (identifier)
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (implication
          (identifier)
          (identifier))
        (implication
          (implication
            (identifier)
            (identifier))
          (implication
            (identifier)
            (identifier)))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (identifier)
          (identifier)
          (identifier)))
      (separator)
      (apply
        (identifier)
        (identifier))
      (separator)
      (identifier)
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (implication
          (identifier)
          (implication
            (identifier)
            (identifier)))
        (implication
          (implication
            (identifier)
            (identifier))
          (implication
            (identifier)
            (identifier)))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (ann_pattern
            (identifier)
            (type_ann
              (implication
                (identifier)
                (implication
                  (identifier)
                  (identifier)))))
          (ann_pattern
            (identifier)
            (type_ann
              (implication
                (identifier)
                (identifier))))
          (identifier)))
      (separator)
      (apply
        (call
          (identifier)
          (identifier))
        (identifier))
      (separator)
      (identifier)
      (end)))
  (separator))

=================
True, False, Not
=================
theorem true-intro-example : True
proof
  trivial
qed

theorem false-elim-example : False --> P
proof
  assume e : False
  absurd e
qed

theorem not-false : ~ False
proof
  assume e
  e
qed

theorem contradiction : ~ P --> P --> False
proof
  assume (np : ~ P) (p : P)
  apply np p
qed

---

(source_file
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (identifier))
    (proof_block
      (begin)
      (separator)
      (identifier)
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (identifier)
        (identifier)))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (identifier)
          (type_ann
            (identifier))))
      (separator)
      (call
        (identifier)
        (identifier))
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (negation
        (identifier)))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (identifier)))
      (separator)
      (identifier)
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (negation
          (identifier))
        (implication
          (identifier)
          (identifier))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (ann_pattern
            (identifier)
            (type_ann
              (negation
                (identifier))))
          (ann_pattern
            (identifier)
            (type_ann
              (identifier)))))
      (separator)
      (apply
        (call
          (identifier)
          (identifier)))
      (end)))
  (separator))

============
Conjunction
============
theorem and-intro : P --> Q --> P /\ Q
proof
  assume p q
  both p q
qed

theorem tactic-style-bullets-example : P --> Q --> P /\ Q
proof
  assume p q
  both
  . p
  . q
qed

theorem named-blocks-example : P --> Q --> P /\ Q
proof
  assume p q
  both ?x ?y
  lemma x by p
  lemma y by q
qed

theorem named-blocks-not-in-order-example : P --> Q --> P /\ Q
proof
  assume p q
  both ?x ?y
  lemma y by q
  lemma x by p
qed

theorem conjunction-elimination-example : P /\ Q --> P
proof
  assume pq
  and-left pq
qed

theorem assume-pattern-matching : P /\ Q --> P
proof
  assume (both p q)
  p
qed

theorem assume-pattern-matching-annotated : P /\ Q --> P
proof
  assume (both p q : P /\ Q)
  p
qed

theorem assume-pattern-matching-annotated-var : P /\ Q --> P
proof
  assume (both (p : P) (q : Q))
  p
qed

theorem and-assoc : (P /\ Q) /\ R --> P /\ (Q /\ R)
proof
  assume (both (both p q) r)
  both p
  both q r
qed

---

(source_file
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (identifier)
        (implication
          (identifier)
          (conjunction
            (identifier)
            (identifier)))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (identifier)
          (identifier)))
      (separator)
      (call
        (identifier)
        (identifier)
        (identifier))
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (identifier)
        (implication
          (identifier)
          (conjunction
            (identifier)
            (identifier)))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (identifier)
          (identifier)))
      (separator)
      (identifier)
      (separator)
      (bullet_block
        (begin)
        (separator)
        (identifier)
        (end))
      (separator)
      (bullet_block
        (begin)
        (separator)
        (identifier)
        (end))
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (identifier)
        (implication
          (identifier)
          (conjunction
            (identifier)
            (identifier)))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (identifier)
          (identifier)))
      (separator)
      (call
        (identifier)
        (hole_identifier)
        (hole_identifier))
      (separator)
      (lemma_declaration
        (identifier)
        (by_block
          (begin)
          (separator)
          (identifier)
          (end)))
      (separator)
      (lemma_declaration
        (identifier)
        (by_block
          (begin)
          (separator)
          (identifier)
          (end)))
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (identifier)
        (implication
          (identifier)
          (conjunction
            (identifier)
            (identifier)))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (identifier)
          (identifier)))
      (separator)
      (call
        (identifier)
        (hole_identifier)
        (hole_identifier))
      (separator)
      (lemma_declaration
        (identifier)
        (by_block
          (begin)
          (separator)
          (identifier)
          (end)))
      (separator)
      (lemma_declaration
        (identifier)
        (by_block
          (begin)
          (separator)
          (identifier)
          (end)))
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (conjunction
          (identifier)
          (identifier))
        (identifier)))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (identifier)))
      (separator)
      (call
        (identifier)
        (identifier))
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (conjunction
          (identifier)
          (identifier))
        (identifier)))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (ctor_pattern
            (identifier)
            (identifier)
            (identifier))))
      (separator)
      (identifier)
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (conjunction
          (identifier)
          (identifier))
        (identifier)))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (ann_pattern
            (ctor_pattern
              (identifier)
              (identifier)
              (identifier))
            (type_ann
              (conjunction
                (identifier)
                (identifier))))))
      (separator)
      (identifier)
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (conjunction
          (identifier)
          (identifier))
        (identifier)))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (ctor_pattern
            (identifier)
            (ann_pattern
              (identifier)
              (type_ann
                (identifier)))
            (ann_pattern
              (identifier)
              (type_ann
                (identifier))))))
      (separator)
      (identifier)
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (conjunction
          (conjunction
            (identifier)
            (identifier))
          (identifier))
        (conjunction
          (identifier)
          (conjunction
            (identifier)
            (identifier)))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (ctor_pattern
            (identifier)
            (ctor_pattern
              (identifier)
              (identifier)
              (identifier))
            (identifier))))
      (separator)
      (call
        (identifier)
        (identifier))
      (separator)
      (call
        (identifier)
        (identifier)
        (identifier))
      (end)))
  (separator))

============
Equivalence
============
theorem iff-intro : (P --> Q) --> (Q --> P) --> P <--> Q
proof
  assume (pq : P --> Q) (qp : Q --> P)
  both pq qp
qed

theorem iff-elim-r : (P <--> Q) --> (Q --> P)
proof
  assume pq : P <--> Q
  and-right pq
qed

theorem iff-elim-r-pattern-matching : (P <--> Q) --> (Q --> P)
proof
  assume (both pq qp)
  qp
qed

---

(source_file
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (implication
          (identifier)
          (identifier))
        (implication
          (implication
            (identifier)
            (identifier))
          (equivalence
            (identifier)
            (identifier)))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (ann_pattern
            (identifier)
            (type_ann
              (implication
                (identifier)
                (identifier))))
          (ann_pattern
            (identifier)
            (type_ann
              (implication
                (identifier)
                (identifier))))))
      (separator)
      (call
        (identifier)
        (identifier)
        (identifier))
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (equivalence
          (identifier)
          (identifier))
        (implication
          (identifier)
          (identifier))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (identifier)
          (type_ann
            (equivalence
              (identifier)
              (identifier)))))
      (separator)
      (call
        (identifier)
        (identifier))
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (equivalence
          (identifier)
          (identifier))
        (implication
          (identifier)
          (identifier))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (ctor_pattern
            (identifier)
            (identifier)
            (identifier))))
      (separator)
      (identifier)
      (end)))
  (separator))

============
Disjunction
============
theorem or-intro-l : P --> P \/ Q
proof
  assume p
  or-left p
qed

theorem or-idempotent : P \/ P --> P
proof
  assume pp
  cases pp impl-refl impl-refl
qed

theorem or-elim-tactic-style : P \/ Q --> Q \/ P
proof
  assume pq
  cases pq
  . assume p
    or-right p
  . assume q
    or-left q
qed

---

(source_file
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (identifier)
        (disjunction
          (identifier)
          (identifier))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (identifier)))
      (separator)
      (call
        (identifier)
        (identifier))
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (disjunction
          (identifier)
          (identifier))
        (identifier)))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (identifier)))
      (separator)
      (cases
        (call
          (identifier)
          (identifier)
          (identifier)))
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (disjunction
          (identifier)
          (identifier))
        (disjunction
          (identifier)
          (identifier))))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (identifier)))
      (separator)
      (cases
        (identifier))
      (separator)
      (bullet_block
        (begin)
        (separator)
        (assume
          (patterns
            (identifier)))
        (separator)
        (call
          (identifier)
          (identifier))
        (end))
      (separator)
      (bullet_block
        (begin)
        (separator)
        (assume
          (patterns
            (identifier)))
        (separator)
        (call
          (identifier)
          (identifier))
        (end))
      (end)))
  (separator))

============
Lemma
============
theorem lemma-example : P \/ P --> P
proof
  assume orpp
  lemma implpp : P --> P by
    assume p
    p
  cases orpp implpp implpp
qed

theorem reverse-lemma : P \/ P --> P
proof
  assume orpp
  cases orpp ?implpp ?implpp
  lemma implpp : P --> P by
    assume p
    p
qed

---

(source_file
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (disjunction
          (identifier)
          (identifier))
        (identifier)))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (identifier)))
      (separator)
      (lemma_declaration
        (identifier)
        (type_ann
          (implication
            (identifier)
            (identifier)))
        (by_block
          (begin)
          (separator)
          (assume
            (patterns
              (identifier)))
          (separator)
          (identifier)
          (end)))
      (separator)
      (cases
        (call
          (identifier)
          (identifier)
          (identifier)))
      (end)))
  (separator)
  (theorem_declaration
    (identifier)
    (type_ann
      (implication
        (disjunction
          (identifier)
          (identifier))
        (identifier)))
    (proof_block
      (begin)
      (separator)
      (assume
        (patterns
          (identifier)))
      (separator)
      (cases
        (call
          (identifier)
          (hole_identifier)
          (hole_identifier)))
      (separator)
      (lemma_declaration
        (identifier)
        (type_ann
          (implication
            (identifier)
            (identifier)))
        (by_block
          (begin)
          (separator)
          (assume
            (patterns
              (identifier)))
          (separator)
          (identifier)
          (end)))
      (end)))
  (separator))

==================
Suffices, proving
==================
theorem suffices-example : (P --> Q) --> (Q --> R) --> P --> R
proof
  assume pq qr p
  suffices Q by
    apply qr
  suffices P by
    apply pq
  assumption
qed

theorem conclusion-annotation-example : Q --> P \/ (Q \/ R)
proof
  assume q
  proving (P \/ (Q \/ R))
  or-right
  proving (Q \/ R)
  or-left
  proving Q
  assumption
qed

---
